@@ -1,4 +1,10 @@
-﻿[B]3.7.4[/B]
+﻿[B]3.7.5[/B]
+• Fehler in der Menüerstellung behoben (onclicks / icons)
+• Fehler der falschen design auswahl der widgets behoben
+• Fehler in der Position des Widgets behoben falls die Library leer ist, zb keine Musicvideos
+
+
+[B]3.7.4[/B]
 • Favoriten sublabel hinzugefügt
 • German telecast offers widget angepasst
 • Das komplette Hauptmenü + Widgets ist jetzt frei wählbar
